# derive-enum-from-into

./: Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
src/: from.rs  into.rs  lib.rs
tests/: from.rs  into.rs
